Beautify the polybar

--- a/dot_config/polybar/executable_config.ini
+++ b/dot_config/polybar/executable_config.ini
@@ -19,7 +19,7 @@ include-file = "~/.config/polybar/include-modules.ini"
 enable-ipc= true
 height = 28
 offset-y = 5
-radius = 15
+radius = 10
 border-size = 0
 border-color = ${colors.foreground}
 module-margin = 2
@@ -43,14 +43,26 @@ offset-x = 10
 
 modules-center = launcher bspwm 
 
+[bar/network]
+inherit = bar/base
+width = 10%
+offset-x = 400
+
+modules-center = wlan eth
+
+[bar/player]
+inherit = bar/base
+width = 10%
+offset-x = 1020
+
+modules-center = previous pause next
+
 [bar/other]
 inherit = bar/base
+width = 36%
+offset-x = 1220
 
-width = 35%
-offset-x = 1230
-
-; Mpd
-modules-center = pulseaudio cpu memory time power
+modules-right = pulseaudio cpu memory time power
 scroll-up = bspwn-wsnext
 scroll-down = bspwn-wsprev
 
