--- a/dot_config/polybar/modules/bspwm.ini
+++ b/dot_config/polybar/modules/bspwm.ini
@@ -18,6 +18,5 @@ label-urgent-foreground = ${colors.red}
 
 label-empty = ⬤
 label-empty-padding = 1
-label-empty-foreground = ${colors.cyan}
-
+label-empty-foreground = ${colors.foreground}
 
