--- a/dot_config/polybar/modules/memory.ini
+++ b/dot_config/polybar/modules/memory.ini
@@ -1,7 +1,6 @@
 [module/memory]
 type = internal/memory
-format-prefix = " "
+format = <label>
+format-prefix = 
 format-foreground = ${colors.foreground}
-label = %percentage_used%%
-
-
+label = %percentage_used:3:2%%
