--- a/dot_config/polybar/modules/time.ini
+++ b/dot_config/polybar/modules/time.ini
@@ -6,9 +6,9 @@ format-margin = 0
 time = "%H:%M"
 date = "%a %d %b"
 
+format =  <label>
 label = %date%, %time%
 label-foreground = ${colors.foreground}
 label-background = ${colors.background}
-;label-padding = 2
 
 
