--- a/dot_config/polybar/colors.ini
+++ b/dot_config/polybar/colors.ini
@@ -1,6 +1,19 @@
 [colors]
 
 background = ${xrdb:background:#000000}
-foreground = ${xrdb:foreground:#ffffff}
+; foreground = ${xrdb:foreground:#ffffff}
 
+; Dracula color palette
+; background = #282A36
+; selection  = #44475A
+; background = #44474A
+foreground = #F8F8F2
+comment    = #6272A4
+cyan 	   = #8BE9FD
+green	   = #50FA7B
+orange	   = #FFB86C
+pink	   = #FF79C6
+purple	   = #BD93F9
+red		   = #FF5555
+yellow	   = #F1FA8C
 
