--- a/dot_config/polybar/modules/cpu.ini
+++ b/dot_config/polybar/modules/cpu.ini
@@ -1,11 +1,13 @@
 [module/cpu]
 type = internal/cpu
 
-; format =  <label> <bar-load>
-format =﬙<label> <ramp-coreload>
-;format-prefix = 
+; format =  <label> <bar-load>
+format =  <label> <ramp-coreload>
+format-prefix = 
+; format-prefix-foreground = ${colors.comment}
+format-foreground = ${colors.foreground}
 
-label = %percentage:2%%
+label = %percentage:3:2%%
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -51,5 +53,4 @@ ramp-coreload-6-foreground = ${colors.orange}
 ramp-coreload-7 = █
 ramp-coreload-7-font = 6
 ramp-coreload-7-foreground = ${colors.red}
-
 
