--- a/dot_config/polybar/modules/network.ini
+++ b/dot_config/polybar/modules/network.ini
@@ -1,37 +1,21 @@
 [module/wlan]
 type = internal/network
-interface = wlx0013eff2094e
+interface = wlp3s0
 interval = 3.0
 
 format-connected =  <label-connected>
-label-connected = %essid%
-label-connected-color1 = ${colors.foreground}
+label-connected = WLAN
+label-connected-foreground = ${colors.foreground}
 
-;format-disconnected =
-format-disconnected = <label-disconnected>
-label-disconnected = %ifname% disconnected
-label-disconnected-color1 = ${colors.foreground}
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-color1 = ${colors.foreground}
+format-disconnected =
 
 [module/eth]
 type = internal/network
-interface = eno1
+interface = enp2s0
 interval = 3.0
 
-format-connected-prefix = " "
-format-connected-prefix-color1 = ${colors.color1-alt}
-label-connected = %local_ip%
+format-connected =  <label-connected>
+format-connected-foreground = ${colors.foreground}
+label-connected =  ETH
 
 format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-color1 = ${colors.color1-alt}
-
-
