--- a/dot_config/polybar/executable_config.ini
+++ b/dot_config/polybar/executable_config.ini
@@ -1,13 +1,13 @@
 ;==========================================================
-;  ██▓███  ▒█████   ██▓   ▓██   ██▓ ▄▄▄▄    ▄▄▄       ██▀███  
+;  ██▓███  ▒█████   ██▓   ▓██   ██▓ ▄▄▄▄    ▄▄▄       ██▀███
 ; ▓██░  ██▒██▒  ██▒▓██▒    ▒██  ██▒▓█████▄ ▒████▄    ▓██ ▒ ██▒
 ; ▓██░ ██▓▒██░  ██▒▒██░     ▒██ ██░▒██▒ ▄██▒██  ▀█▄  ▓██ ░▄█ ▒
-; ▒██▄█▓▒ ▒██   ██░▒██░     ░ ▐██▓░▒██░█▀  ░██▄▄▄▄██ ▒██▀▀█▄  
+; ▒██▄█▓▒ ▒██   ██░▒██░     ░ ▐██▓░▒██░█▀  ░██▄▄▄▄██ ▒██▀▀█▄
 ; ▒██▒ ░  ░ ████▓▒░░██████▒ ░ ██▒▓░░▓█  ▀█▓ ▓█   ▓██▒░██▓ ▒██▒
 ; ▒▓▒░ ░  ░ ▒░▒░▒░ ░ ▒░▓  ░  ██▒▒▒ ░▒▓███▀▒ ▒▒   ▓▒█░░ ▒▓ ░▒▓░
 ; ░▒ ░      ░ ▒ ▒░ ░ ░ ▒  ░▓██ ░▒░ ▒░▒   ░   ▒   ▒▒ ░  ░▒ ░ ▒░
-; ░░      ░ ░ ░ ▒    ░ ░   ▒ ▒ ░░   ░    ░   ░   ▒     ░░   ░ 
-;     ░       ░ ░      ░  ░░ ░      ░            ░  ░   ░     
+; ░░      ░ ░ ░ ▒    ░ ░   ▒ ▒ ░░   ░    ░   ░   ▒     ░░   ░
+;     ░       ░ ░      ░  ░░ ░      ░            ░  ░   ░
 ;       ░                  ░ ░           ░
 ; author: Ther                        ░  ░       ░
 ;==========================================================
@@ -41,7 +41,7 @@ inherit = bar/base
 width = 20%
 offset-x = 10
 
-modules-center = launcher bspwm 
+modules-center = launcher bspwm
 
 [bar/network]
 inherit = bar/base
@@ -53,18 +53,29 @@ modules-center = wlan eth
 [bar/player]
 inherit = bar/base
 width = 10%
-offset-x = 1020
+offset-x = 850
 
 modules-center = previous pause next
 
 [bar/other]
 inherit = bar/base
-width = 36%
-offset-x = 1220
+width = 24%
+offset-x = 1050
 
-modules-right = pulseaudio cpu memory time power
+modules-right = pulseaudio cpu memory
 scroll-up = bspwn-wsnext
 scroll-down = bspwn-wsprev
+
+[bar/tray]
+inherit = bar/base
+
+width = 20%
+offset-x = 1520
+
+tray-position = left
+tray-padding = 2
+
+modules-center = time
 
 [settings]
 screenchange-reload = true
